# automata

./: .gitignore  README.md  main.py  pyproject.toml
lib/: DFA.py  NFA.py  default_nfa.py  utils.py
